--- a/src/components/sidebar/Sidebar.module.scss
+++ b/src/components/sidebar/Sidebar.module.scss
@@ -2,6 +2,7 @@
   background-color: #ffffff;
   flex: 1;
   min-height: 100vh;
+  border-right: 0.5px solid rgb(226, 226, 226);
   position: sticky;
   .top {
     min-height: 50px;
@@ -12,7 +13,7 @@
       font-size: 20px;
       font-weight: bold;
       color: #ff4a1c;
-      img{
+      img {
         max-width: 170px;
         padding: 0.5rem;
       }
