--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -4,10 +4,14 @@
   .homeContainer {
     background-color: #dcdcdc;
     flex: 6;
-    .widgets {
+    .widgets, .charts {
       display: flex;
       padding: 20px;
       gap: 20px;
+    }
+    .charts{
+      padding: 5px 20px;
+      
     }
   }
 }
