--- a/src/components/profiletable/ProfileTable.module.scss
+++ b/src/components/profiletable/ProfileTable.module.scss
@@ -22,3 +22,21 @@
 
     }
 }
+
+.cellAction{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    .viewButton{
+        padding: 4px 8px;
+        border-radius: 5px;
+        color: darkblue;
+        border: 1px solid rgba(0, 0, 139, 0.596);
+    }
+    .deleteButton{
+        padding: 4px 8px;
+        border-radius: 5px;
+        color: crimson;
+        border: 1px solid rgba(220, 20, 60, 0.597);
+    }
+}
