--- a/src/pages/profile/Profile.module.scss
+++ b/src/pages/profile/Profile.module.scss
@@ -1,8 +1,95 @@
-.profile{
-    display: flex;
-    width: 100%;
-    .profileContainer{
-        flex: 6;
-        background-color: #dcdcdc;
+.profile {
+  display: flex;
+  width: 100%;
+  .profileContainer {
+    flex: 6;
+    background-color: #dcdcdc;
+
+    .top {
+      padding: 20px;
+      display: flex;
+      gap: 20px;
+
+      .left {
+        background-color: #ffffff;
+        flex: 1;
+        -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+        box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+        padding: 20px;
+        position: relative;
+
+        .editButton{
+            position: absolute;
+            top: 0;
+            right: 0;
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+            color: #7451f8;
+            background-color: #7551f823;
+            cursor: pointer;
+            border-radius: 0 0 0 5px;
+        }
+
+        .item{
+            display: flex;
+            gap: 20px;
+
+            .itemImg{
+                width: 100px;
+                height: 100px;
+                border-radius: 50%;
+                object-fit: cover;
+            }
+
+            .details{
+                .userTitle{
+                    margin-bottom: 10px;
+                    color: #555;
+                }
+                .userDetail{
+                    margin-bottom: 10px;
+                    font-size: 14px;
+
+                    .key{
+                        font-weight: bold;
+                        color: gray;
+                        margin-right: 5px;
+                    }
+                    .value{
+                        font-weight: 300;
+                    }
+                }
+            }
+        }
+
+
+      }
+      .right{
+        flex: 2;
+        
+      }
+
     }
+  }
+}
+
+.bottom{
+    background-color: #ffffff;
+    -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+        box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+        padding: 20px;
+        margin: 10px 20px;
+        .listContainer{
+            padding: 1rem;
+            max-height: 600px;
+            overflow: auto;
+            
+        }
+
+}
+
+.title{
+    font-size: 1.1rem;
+    color: rgb(168, 168, 168);
+    margin-bottom: 20px;
 }
