--- a/src/components/profiletable/ProfileTable.module.scss
+++ b/src/components/profiletable/ProfileTable.module.scss
@@ -32,11 +32,13 @@
         border-radius: 5px;
         color: darkblue;
         border: 1px solid rgba(0, 0, 139, 0.596);
+        cursor: pointer;
     }
     .deleteButton{
         padding: 4px 8px;
         border-radius: 5px;
         color: crimson;
         border: 1px solid rgba(220, 20, 60, 0.597);
+        cursor: pointer;
     }
 }
